Less lambdas, prefer Path.of()